--- a/app/views/posts/_articles_preview.html.erb
+++ b/app/views/posts/_articles_preview.html.erb
@@ -1,6 +1,5 @@
-<%# TODO copy of small_preview, change to display the articles on the team page. it is also used on the home page (featured articles -> ul.featured_articles) %>
 <li class="team-item">
-<div class="preview">
+  <div class="preview">
     <%= youtube_thumbnail(post.youtube_thumbnail_url,[post.postable, post]) if post.video || (post.article && !post.article.video_url.blank?) %>
     <% if post.photo || (post.article && post.article.image.exists?) %>
         <a class="photo" href="<%= post.photo_url(:large) %>"><img src="<%= post.photo_url(:medium) %>" alt="" height="135px"/></a>
@@ -8,12 +7,16 @@
   </div>
   <div class="item-top">
     <h3><%= link_to truncate(post.title, :length => 24), post, :title => post.title %></h3>
-    <div class="which-college"><span>by:</span> <%= link_to(truncate(post.user.try(:username), :length => 16), post.user, :class => :author) %>&nbsp;<span class="article_college">College:&nbsp;<a href="#">Erlington College</a></span></div>
-   
-<div class="summary">
-    <p><%= censoring(truncate(post.summary, :length => 300)) %></p>
-  </div>
- <div class="votes">
+    <div class="which-college"><span>by:</span> <%= link_to(truncate(post.user.try(:username), :length => 16), post.user, :class => :author) %>
+      <% if params[:controller] == 'welcome' %>
+        &nbsp;<span class="article_college">College:&nbsp;<%= link_to post.postable.name, post.postable %></span>
+      <% end %>
+    </div>
+
+    <div class="summary">
+      <p><%= censoring(truncate(post.summary, :length => 300)) %></p>
+    </div>
+    <div class="votes">
      <%= share_and_voting_icons(post, :show) %>
     </div>
   </div>
