--- a/app/views/colleges/show.html.erb
+++ b/app/views/colleges/show.html.erb
@@ -8,6 +8,7 @@
 
   <div class="content_container">
     <div class="photovideo">
+	     
       <h3 class="college_content_title_first">Featured Articles</h3>
       <div class="category_container">
         <div class="content_category">
@@ -21,6 +22,7 @@
           </div>
         </div>
       </div>
+	   <div class="separator_line"></div>
       <h3 class="college_content_title">User Posts</h3>
       <div class="category_container">
         <div class="content_category ">
