--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -81,7 +81,8 @@
 	<div class="most_smacked_number"><h3><%= @colleges.first.smacks_count %>&nbsp;smacks</h3></div>
 
   </div>
-  <div class="title_underlined"><h2>Featured Articles</h2></div>
+   <div class="separator_line"></div>
+  <div class="college_content_title"><h2>Featured Articles</h2></div>
   <div class="content_container clearfix">
     <div class="new_line"></div>
     <ul class="items featured_articles">
@@ -90,7 +91,8 @@
       <% end %>
     </ul>
   </div>
-  <div class="title_underlined"><h2>Smacks of the Week</h2></div>
+     <div class="separator_line"></div>
+  <div class="college_content_title"><h2>Smacks of the Week</h2></div>
   <div class="content_container clearfix">
     <div class="home_smacks_of_week">
     <%= render :partial => 'sotw', :collection => Post.smacks_of_week %></div>
