--- a/app/views/colleges/show.html.erb
+++ b/app/views/colleges/show.html.erb
@@ -9,7 +9,8 @@
   <div class="content_container">
     <div class="photovideo">
 	     
-      <h3 class="college_content_title_first">Featured Articles</h3>
+      <div class="college_content_title"><h2>Featured Articles</h2></div>
+	  <div class="separator_line"></div>
       <div class="category_container">
         <div class="content_category">
           <ul class="items articles">
@@ -22,8 +23,9 @@
           </div>
         </div>
       </div>
-	   <div class="separator_line"></div>
-      <h3 class="college_content_title">User Posts</h3>
+	   
+      <div class="college_content_title"><h2>User Posts</h2></div>
+	  <div class="separator_line"></div>
       <div class="category_container">
         <div class="content_category ">
           <div class="category_title">
