Added link to logo, some fixes.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
         <% end %>
       </div>
 
-      <h1 class="logo">Campusmack</h1>
+      <a href="/"><h1 class="logo">Campusmack</h1></a>
 
       <%= user_nav %>
     </div>
