--- a/app/views/posts/_articles_preview.html.erb
+++ b/app/views/posts/_articles_preview.html.erb
@@ -14,7 +14,7 @@
     </div>
 
     <div class="summary">
-      <p><%= censoring(truncate(post.summary, :length => 300)) %></p>
+      <p><%= truncate(censoring(post.summary), :length => 160) %></p>
     </div>
     <div class="votes">
      <%= share_and_voting_icons(post, :show) %>
