--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -69,7 +69,7 @@
             <% end %>
             <tr>
               <td class="description va-top"><%= f.label :summary, 'Summary:' %></td>
-              <td class="entry"><%= f.cktext_area :summary %></td>
+              <td class="entry"><%= f.text_area :summary %></td>
             </tr>
             <% if @post.article %>
               <%= f.fields_for :article, @post.article do |a| %>
