--- a/public/stylesheets/utility_components.css
+++ b/public/stylesheets/utility_components.css
@@ -70,9 +70,11 @@ input.dark_button{
     -webkit-border-radius: 5px;
     -khtml-border-radius: 5px;
     border-radius: 5px;
+     behavior: url(PIE.htc);
     border:none;
     text-align: center;
     width: auto!important;
+ 
 }
 
 
@@ -85,6 +87,7 @@ input.dark_button{
     -khtml-border-radius: 5px;
     border-radius: 5px;
     text-align: center;
+   
 }
 
 .dark_button a {
@@ -95,6 +98,7 @@ input.dark_button{
     font-size: 19px;
     line-height: 28px;
     text-transform: uppercase;
+  
 }
 
 .dark_button:hover {
