--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -414,6 +414,7 @@ a.sign_up:hover {
   -moz-border-radius: 5px;
   -o-border-radius: 5px;
   border-radius: 5px;
+   behavior: url(PIE.htc);
 }
 
 .new_level {
@@ -620,6 +621,7 @@ a.sign_up:hover {
   -moz-border-radius-bottomright: 4px;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
+   behavior: url(PIE.htc);
 }
 
 .search .button.blue:hover {
@@ -1358,12 +1360,16 @@ to keep footer on the bottom of page.
 /* */
 
 #basic_content .wrapper {
+  background-color:white;
   overflow: visible;
   clear: both;
   -moz-box-shadow: 0 5px 50px rgba(0, 0, 0, 0.4);
   -webkit-box-shadow: 0 5px 50px rgba(0, 0, 0, 0.4);
   box-shadow: 0 5px 50px rgba(0, 0, 0, 0.4);
+ behavior: url(PIE.htc);
 }
+
+
 
 #conference_column {
   background: #fff;
@@ -1702,6 +1708,7 @@ form.semantic input, form.semantic textarea {
   -webkit-border-radius: 5px;
   -khtml-border-radius: 5px;
   border-radius: 5px;
+   behavior: url(PIE.htc);
 }
 
 form.semantic input {
@@ -1748,6 +1755,7 @@ form.semantic button, form.semantic .actions input {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
+   behavior: url(PIE.htc);
 }
 
 form.semantic .actions input {
