--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -31,7 +31,7 @@
   </div>
   <div class="description">
    <p> <%= link_to "Article Preview", post.news_post.url, :class => 'snap_shots' unless post.news_post.blank? %>
-    <%= truncate(post.summary, :length => 160) %></p>
+    <%= truncate(post.summary, :length => Post::MAX_TEXT_LEN) %></p>
   </div>
   <div class="actions">
     <%= share_and_voting_icons(post, :post) %>
