Sign in/up links

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="right_column">
-      <%= render :partial => "users/shared/sign_up_services_list" %>
+      <%= render :partial => "users/shared/sign_up_services_list", :locals => { :sign_in_or_up => :up } %>
       <div class="title_box">
         <h2>ALREADY A MEMBER?</h2>
       </div>
