--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -81,17 +81,18 @@
 	<div class="most_smacked_number"><h3><%= @colleges.first.smacks_count %>&nbsp;smacks</h3></div>
 
   </div>
-
-  <div class="college_content_title"><h2>Featured Articles</h2></div>
-  <div class="separator_line"></div>
-  <div class="content_container clearfix">
-    <div class="new_line"></div>
-    <ul class="items featured_articles">
-      <% @featured_articles.each do |post| %>
-        <%= render "posts/articles_preview", :post => post %>
-      <% end %>
-    </ul>
-  </div>
+  <% if @featured_articles.any? %>
+    <div class="college_content_title"><h2>Featured Articles</h2></div>
+    <div class="separator_line"></div>
+    <div class="content_container clearfix">
+      <div class="new_line"></div>
+      <ul class="items featured_articles">
+        <% @featured_articles.each do |post| %>
+          <%= render "posts/articles_preview", :post => post %>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
 
   <div class="college_content_title"><h2>Smacks of the Week</h2></div>
     <div class="separator_line"></div>
