Import button fixed

--- a/app/views/contacts/_import_form.html.erb
+++ b/app/views/contacts/_import_form.html.erb
@@ -20,5 +20,5 @@
 </script>
 
 <%= text_area_tag("contact", nil, {:rows => 1, :cols => 5, :style => "height:28px;width:380px;padding:10px;display:none "}) %>
-<a href="#" class="import" onclick="showPlaxoABChooser('contact', '<%=  plaxo_import_user_path(current_user) %>'); return false"><p>IMPORT CONTACTS</p></a>
+<a href="#" class="import" onclick="showPlaxoABChooser('contact', '<%=  plaxo_import_user_path(current_user) %>'); return false">IMPORT CONTACTS</a>
 
