--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -49,7 +49,7 @@
       <%= link_to @post.postable.name, method("#{@post.postable_type.downcase}_path").call(@post.postable) %>
     </span>
           Posted
-          <span class="date"><%= time_ago_in_words(@post.created_at) %> ago</span>
+          <span class="date"><%= formatted_datetime(@post.created_at.to_datetime) %>, </span>
           <em>by</em>
           <%= link_to @post.user.try(:username), user_path(@post.user), :class => "author" %>
         </div>
