--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,6 @@
 <div class="content_unit2 clearfix">
   <div class="preview">
-    <% if post.photo %>
+    <% if post.photo || (post.article && post.article.image.exists?) %>
       <a class="photo" href="<%= post.photo_url(:large) %>"><img src="<%= post.photo_url(:medium) %>" width="180" alt=""/></a>
     <% end %>
     <% if post.news_post %>
@@ -10,12 +10,10 @@
         <a class="photo" href="<%= post.news_post.image_url(:large) %>"><img src="<%= post.news_post.image_url(:medium) %>" width="180" alt=""/></a>
       <% end %>
     <% end %>
-      <% if post.video %>
-        <%= youtube_thumbnail(post.youtube_thumbnail_url,[post.postable, post]) %>
-      <% end %>
-      <% if post.news_post && !post.news_post.video_url.blank? %>
-          <%= youtube_embed(post.news_post.video_url) %>
-      <% end %>
+    <%= youtube_thumbnail(post.youtube_thumbnail_url,[post.postable, post]) if post.video || (post.article && !post.article.video_url.blank?) %>
+    <% if post.news_post && !post.news_post.video_url.blank? %>
+        <%= youtube_embed(post.news_post.video_url) %>
+    <% end %>
   </div>
   <div class="title">
     <%= link_to censoring(post.title), [post.postable, post] %>
